# xai

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/basic_chat/: CMakeLists.txt  README.md
examples/basic_chat/main/: CMakeLists.txt  main.c
examples/conversation/: CMakeLists.txt  README.md
examples/conversation/main/: CMakeLists.txt  conversation_example.c
examples/image_generation/: CMakeLists.txt  README.md
examples/image_generation/main/: CMakeLists.txt  image_gen_example.c
examples/streaming_chat/: CMakeLists.txt  README.md
examples/streaming_chat/main/: CMakeLists.txt  streaming_chat_example.c
examples/tools/: CMakeLists.txt  README.md
examples/tools/main/: CMakeLists.txt  tools_example.c
examples/vision/: CMakeLists.txt  README.md
examples/vision/main/: CMakeLists.txt  vision_example.c
examples/voice_demo_simple/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/voice_demo_simple/main/: CMakeLists.txt  idf_component.yml  voice_demo_simple.c  voice_demo_ui.c
examples/voice_demo_simple/main/audio/: audio_decoder.c  audio_playback.c  audio_playback.h
examples/voice_demo_simple/main/config/: app_config.h
examples/voice_demo_simple/main/i2c/: i2c_manager.h
examples/voice_demo_simple/main/network/: websocket_client.c  websocket_client.h  wifi_manager.h
examples/voice_demo_simple/main/ui/: ui_events.cpp  ui_events.h  ui_init.cpp  ui_init.h  ui_screens.cpp  ui_screens.h
examples/voice_realtime_lvgl/: CMakeLists.txt  README.md  README_UI.md  partitions.csv  sdkconfig.defaults
examples/voice_realtime_lvgl/components/SensorLib/: CMakeLists.txt
examples/voice_realtime_lvgl/main/: CMakeLists.txt  idf_component.yml  main.c  voice_demo_headless.c
examples/voice_realtime_lvgl/main/audio/: audio_decoder.h  audio_init.c  audio_init.h
examples/voice_realtime_lvgl/main/config/: app_config.h
examples/voice_realtime_lvgl/main/i2c/: i2c_manager.c
examples/voice_realtime_lvgl/main/network/: wifi_manager.c
examples/voice_realtime_lvgl/main/ui/: ui_events.cpp  ui_events.h  ui_init.cpp  ui_screens.cpp  ui_screens.h
examples/web_search/: CMakeLists.txt  README.md
examples/web_search/main/: CMakeLists.txt  web_search_example.c
include/: xai.h  xai_voice_realtime.h
private_include/: xai_internal.h  xai_ws_assembler.h
src/: xai.c  xai_chat.c  xai_conversation.c  xai_error.c  xai_http.c  xai_images.c  xai_json.c  xai_models.c  xai_responses.c  xai_search.c  xai_stream.c  xai_tokenize.c  xai_voice_realtime.c  xai_ws_assembler.c
